k8s/overlays/prod/patches/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-management
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: web
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
